tests/NormalTests/paczka2/big_fuzzy/38150115.err
Error in line 7: xtb3z68nRFi S886 91,0
Error in line 6: S922 S922 400,8
Error in line 12: Wa58hn S854 58,6
Error in line 22: t0xL S886 53,6
Error in line 26: t0xL S854 49,0
Error in line 24: S922 S854 52,6
Error in line 28: S922 S922 6,6
Error in line 30: S922 S886 78,9
Error in line 41: S922 S854 96,1
Error in line 27: t0xL S13 92,0
Error in line 43: t0xL S922 5,4
Error in line 40: qi7U4JGL6rp S886 90,5
Error in line 42: S922 S922 57,3
Error in line 44: t0xL S13 13,3
Error in line 59: 0Hs S13 75,9
Error in line 64: 0Hs S922 87,1
Error in line 75: qi7U4JGL6rp S854 -2,3
Error in line 74: qi7U4JGL6rp S854 43,0
Error in line 67: t0xL S886 67,1
Error in line 73: xtb3z68nRFi S886 379,3
Error in line 97: Wa58hn S922 28,v
Error in line 98: t0xL S13 29,0
Error in line 104: Wa58hn S922 -1,2
Error in line 86: Wa58hn S886 14,3
Error in line 107: xtb3z68nRFi S886 89,36
Error in line 102: xtb3z68nRFi S886 33,8
Error in line 105: Wa58hn S13 84,6
Error in line 116: S922 S886 0,5
Error in line 101: qi7U4JGL6rp S13 4,5
Error in line 126: b6f2qQzWAt S886 86,8
Error in line 130: qi7U4JGL6rp S13 69,50
Error in line 122: xtb3z68nRFi S922 34,7
Error in line 124: qi7U4JGL6rp S886 13,8
Error in line 123: t0xL S886 7,5
Error in line 147: S922 S922 15,6
Error in line 135: t0xL S854 99,9
Error in line 134: qi7U4JGL6rp S13 203,6
Error in line 155: qi7U4JGL6rp S922 21,8
Error in line 157: 0Hs S13 25,7
Error in line 173: b6f2qQzWAt S13 55,5
Error in line 175: qi7U4JGL6rp S922 11,5
Error in line 179: b6f2qQzWAt S886 84,2
Error in line 188: bf2qQzWAt S922 71,2
Error in line 187: b6f2qQzWAt S922 56,4
Error in line 189: b6f2qQzWAt S854 53,5
Error in line 196: t0xL S922 75,7
Error in line 204: b6f2qQzWAt S854 84,7
Error in line 190: Wa58hn S886 96,6
Error in line 216: S922 S854 52,6
Error in line 210: Wa58hn S854 84,6
Error in line 220: 0Hs S854 62,3
Error in line 214: xtb3z68nRFi S13 2,7
Error in line 223: xtb3z68nRFi S886 65,5
Error in line 236: S9UU S9UU 1U,6
Error in line 228: Wa58hn S886 2,8
Error in line 237: Wa58hn S13 46,1
